<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:gravity="top"
android:stretchColumns="field">

    <RelativeLayout android:id="@+id/relativeLayout01"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout android:id="@+id/fdLinearLayoutList"
            android:orientation="vertical" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true">

            <LinearLayout android:id="@+id/fdLinearLayoutSelect"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" android:paddingLeft="10dp"
                android:paddingRight="10dp" android:paddingBottom="5dp">

                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <Button android:id="@+id/fdButtonSelect" android:layout_height="wrap_content"
                        android:layout_width="0dip" android:layout_weight=".9"
                        android:text="@string/view"></Button>
                    <Button android:id="@+id/fdButtonNew" android:layout_height="wrap_content"
                        android:layout_width="0dip" android:layout_weight=".9"
                        android:text="@string/delete"></Button>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:id="@+id/fdLinearLayoutCreate"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" android:paddingLeft="10dp"
                android:paddingRight="10dp" android:paddingBottom="5dp">
                <TextView android:id="@+id/textViewFilename" android:text="@string/file_name"
                    android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <EditText android:text="" android:id="@+id/fdEditTextFile"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:layout_above="@+id/fdLinearLayoutList">
            <TextView android:id="@+id/path" android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <ListView android:id="@android:id/list" android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
            <TextView android:id="@android:id/empty"
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:text="@string/no_files_downloaded"
                android:gravity="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="50dp" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>